Add comments on graphs

--- a/Proximal_Langevin_MCMC.ipynb
+++ b/Proximal_Langevin_MCMC.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {
     "id": "YMHFxuGPFLiw"
    },
@@ -454,12 +454,12 @@
     "id": "ydZJ5ENznWdb"
    },
    "source": [
-    "####P-MALA"
+    "#### P-MALA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "id": "T6tzNGTyy-FP"
    },
@@ -564,11 +564,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the **Corollary 3.2**, if the target density $\\pi \\in \\mathcal{E}(\\beta, \\gamma)$ then P-MALA is geometrically ergodic $\\forall \\delta >0$. In this part, we illustrate this result for log-concave densities of this family. \n",
+    "Despite the fact that P-ULA and P-MALA are defined with $\\lambda = \\delta/2$, we give some illustrations with different values of $\\lambda$ in order to prove that as said in theory the best choice is $\\lambda = \\delta/2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "IPned2htsGyE"
    },
    "source": [
-    "##### Simulate from univariate Laplace distribution"
+    "##### Simulate from univariate Laplace distribution\n",
+    "\n",
+    "To begin let's try to simulate from a density that is not differentiable. That's one of the purpose of P-MALA by using proximal operators. Here we simulate from an univariate Laplace distribution. Its density is in general defined as : $\\frac{1}{2b}\\exp(-\\frac{\\lvert x-\\mu \\rvert}{b})$ where $\\mu \\in \\mathbb{R}$ and $b>0$"
    ]
   },
   {
@@ -589,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {
     "id": "ipcxz8egy_vV"
    },
@@ -597,24 +607,25 @@
    "source": [
     "# Sampler setup\n",
     "def def_options(samples, thinning, delta, lamda, display, targetRate, updateDelta, burnIn):\n",
-    "  options = {}\n",
-    "  options['samples'] = samples # total number of samples\n",
-    "  options['thinning'] = thinning # thinning factor (i.e., iterations per sample)\n",
-    "  options['delta'] = delta # value of time-discretisation step \"delta\"\n",
-    "  options['lambda'] = lamda\n",
-    "  options['display'] = display # do not display progressbar\n",
-    "  options['targetRate'] = targetRate # target an acceptance probability of around 60%\n",
-    "  options['updateDelta'] = updateDelta # adjust the value of delta every ... iterations\n",
-    "  options['burnIn'] = burnIn # adjust the value of delta only during the first ... iterations\n",
+    "    options = {}\n",
+    "    options['samples'] = samples # total number of samples\n",
+    "    options['thinning'] = thinning # thinning factor (i.e., iterations per sample)\n",
+    "    options['delta'] = delta # value of time-discretisation step \"delta\"\n",
+    "    options['lambda'] = lamda\n",
+    "    options['display'] = display # do not display progressbar\n",
+    "    options['targetRate'] = targetRate # target an acceptance probability of around 60%\n",
+    "    options['updateDelta'] = updateDelta # adjust the value of delta every ... iterations\n",
+    "    options['burnIn'] = burnIn # adjust the value of delta only during the first ... iterations\n",
     "  \n",
-    "  return options"
+    "    return options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
-    "id": "g7Cf6qxj0dmS"
+    "id": "g7Cf6qxj0dmS",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -626,10 +637,10 @@
     "PMALA_samples_list = []\n",
     "\n",
     "for lamda in lamdas:\n",
-    "  options['lambda'] = lamda\n",
-    "  PMALA_samples, _, _, _, delta = pmala(X0,g1,proxg1,options)\n",
-    "  PMALA_samples = PMALA_samples.reshape(PMALA_samples.shape[0],PMALA_samples.shape[1])\n",
-    "  PMALA_samples_list.append(PMALA_samples[accepted == 1])"
+    "    options['lambda'] = lamda\n",
+    "    PMALA_samples, _, accepted, _, delta = pmala(X0,g1,proxg1,options)\n",
+    "    PMALA_samples = PMALA_samples.reshape(PMALA_samples.shape[0],PMALA_samples.shape[1])\n",
+    "    PMALA_samples_list.append(PMALA_samples[accepted == 1])"
    ]
   },
   {
@@ -664,8 +675,15 @@
     "plt.figure(figsize=(14.5,9))\n",
     "\n",
     "for i in range(1,len(PMALA_samples_list)+1):\n",
-    "  plt.subplot(2,2,i)\n",
-    "  hist_and_true_dens(PMALA_samples_list[i-1], log_p, \"Sampling with delta = {0} and lambda = {1}\".format(delta,lamdas[i-1]))"
+    "    plt.subplot(2,2,i)\n",
+    "    hist_and_true_dens(PMALA_samples_list[i-1], log_p, \"Sampling with delta = {0} and lambda = {1}\".format(delta,lamdas[i-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see on those graphs above, when $\\lambda=\\delta/2$ the Markov chain produced by P-MALA is ergodic and the stationnary distribution is a good approximation of the Laplace distribution. We also remark that when $\\lambda$ is too big or too small ($\\ll \\delta/2$), the Markov chain produced is explosive and does not converge to the target distribution."
    ]
   },
   {
@@ -676,7 +694,7 @@
    },
    "outputs": [],
    "source": [
-    "options = def_options(samples=1e4, thinning=1, delta=5, lamda=3, display=0, targetRate=0.6, \n",
+    "options = def_options(samples=1e4, thinning=1, delta=5, lamda=2.5, display=0, targetRate=0.6, \n",
     "                      updateDelta=20, burnIn=1e4)\n",
     "\n",
     "X0 = np.random.rand(1, 1)\n",
@@ -684,10 +702,10 @@
     "PMALA_samples_list = []\n",
     "\n",
     "for rate in target_rates:\n",
-    "  options['targetRate'] = rate\n",
-    "  PMALA_samples, _, accepted, _, _ = pmala(X0,g1,proxg1,options)\n",
-    "  PMALA_samples = PMALA_samples.reshape(PMALA_samples.shape[0],PMALA_samples.shape[1])\n",
-    "  PMALA_samples_list.append(PMALA_samples[accepted == 1])"
+    "    options['targetRate'] = rate\n",
+    "    PMALA_samples, _, accepted, _, _ = pmala(X0,g1,proxg1,options)\n",
+    "    PMALA_samples = PMALA_samples.reshape(PMALA_samples.shape[0],PMALA_samples.shape[1])\n",
+    "    PMALA_samples_list.append(PMALA_samples[accepted == 1])"
    ]
   },
   {
@@ -721,13 +739,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "AMFAYGa2fRBy"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here, we set $\\lambda$ to $\\delta/2$ and use the law of large numbers to see how fast the chains produced converge in function of the acceptance rate and inderectly the step size $\\delta$. We can then see on the graph just above that no matter the acceptance rate is low or high the law of large numbers works well. That being said, when the acceptance rate is in the interval $[45\\%,65\\%]$ the convergence seems to be faster."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -735,7 +753,11 @@
     "id": "FqgFySXXbYFM"
    },
    "source": [
-    "#####Simulate from univariate Quartic distribution"
+    "##### Simulate from univariate Quartic distribution\n",
+    "\n",
+    "Let's now try to simulate from an univariate Quartic distribution. Previously, we proved numericaly that MALA is not geometrically ergodic for this type of distributions. More generally for densities of the family $\\mathcal{E}(\\beta, \\gamma)$ with $\\beta>2$, MALA is not geometrically ergodic (*Roberts and Tweedie 1996*). Below, we prove that P-MALA is geomtrically ergodic in this case.\n",
+    "\n",
+    "The expression of target density we consider here is $\\pi(x) \\propto \\exp(-x^4)$. The mean of the associated distribution is $0$. Here in order to compare the histogram of the samples with the target density, we compute the normalization constant with the function `quad` from `scipy.integrate`."
    ]
   },
   {
@@ -824,6 +846,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clearly, according to the graph above the Markov chain produced by P-MALA is ergodic and the stationnary distribution seems to be a good approximation of the Quartic distribution. \n",
+    "\n",
+    "We can now try to see why that works for P-MALA and not for MALA. An idea is to see the values taken by the proximity mappings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {
@@ -868,8 +899,8 @@
     "x = sorted(PMALA_samples_accepted)\n",
     "\n",
     "for i in range(1,len(lamdas)+1):\n",
-    "  y = np.array([proxg3(x_j, lamdas[i-1]) for x_j in x])\n",
-    "  plt.plot(x, y, label=\"lambda = {0}\".format(lamdas[i-1]))\n",
+    "    y = np.array([proxg3(x_j, lamdas[i-1]) for x_j in x])\n",
+    "    plt.plot(x, y, label=\"lambda = {0}\".format(lamdas[i-1]))\n",
     "\n",
     "plt.xlabel('samples')\n",
     "plt.legend()\n",
@@ -877,13 +908,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "0uCiQHeJoZ87"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can see that the proximity mappings are not explosive for the sample values"
+   ]
   },
   {
    "cell_type": "code",
