Add more comments

--- a/Proximal_Langevin_MCMC.ipynb
+++ b/Proximal_Langevin_MCMC.ipynb
@@ -566,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the **Corollary 3.2**, if the target density $\\pi \\in \\mathcal{E}(\\beta, \\gamma)$ then P-MALA is geometrically ergodic $\\forall \\delta >0$. In this part, we illustrate this result for log-concave densities of this family. \n",
+    "According to the **Corollary 3.2** of the article, if the target density $\\pi \\in \\mathcal{E}(\\beta, \\gamma)$ then P-MALA is geometrically ergodic $\\forall \\delta >0$. In this part, we illustrate this result for log-concave densities of this family. \n",
     "Despite the fact that P-ULA and P-MALA are defined with $\\lambda = \\delta/2$, we give some illustrations with different values of $\\lambda$ in order to prove that as said in theory the best choice is $\\lambda = \\delta/2$."
    ]
   },
@@ -755,7 +755,7 @@
    "source": [
     "##### Simulate from univariate Quartic distribution\n",
     "\n",
-    "Let's now try to simulate from an univariate Quartic distribution. Previously, we proved numericaly that MALA is not geometrically ergodic for this type of distributions. More generally for densities of the family $\\mathcal{E}(\\beta, \\gamma)$ with $\\beta>2$, MALA is not geometrically ergodic (*Roberts and Tweedie 1996*). Below, we prove that P-MALA is geomtrically ergodic in this case.\n",
+    "Let's now try to simulate from an univariate Quartic distribution. Previously, we proved numericaly that MALA is not geometrically ergodic for this type of distributions. More generally for densities of the family $\\mathcal{E}(\\beta, \\gamma)$ with $\\beta>2$, MALA is not geometrically ergodic (as proven in *Roberts and Tweedie 1996*). Below, we prove that P-MALA is geomtrically ergodic in this case.\n",
     "\n",
     "The expression of target density we consider here is $\\pi(x) \\propto \\exp(-x^4)$. The mean of the associated distribution is $0$. Here in order to compare the histogram of the samples with the target density, we compute the normalization constant with the function `quad` from `scipy.integrate`."
    ]
@@ -851,7 +851,7 @@
    "source": [
     "Clearly, according to the graph above the Markov chain produced by P-MALA is ergodic and the stationnary distribution seems to be a good approximation of the Quartic distribution. \n",
     "\n",
-    "We can now try to see why that works for P-MALA and not for MALA. An idea is to see the values taken by the proximity mappings."
+    "We can now try to see why P-MALA works in this case and not MALA. An idea is to see the values taken by the proximity mappings."
    ]
   },
   {
@@ -913,7 +913,7 @@
     "id": "0uCiQHeJoZ87"
    },
    "source": [
-    "We can see that the proximity mappings are not explosive for the sample values"
+    "We can see that the proximity mappings are not explosive for the values taken by the samples. Indeed, since $\\operatorname{prox}^{\\lambda}_{g}(x)$ converges to the identity function when $\\lambda \\rightarrow 0$, when the step size is well chosen the markov chain won't explose and explore zones we don't want it to. "
    ]
   },
   {
